src/assets/scss/common/elementOverride.scss
@forward '~element-plus/theme-chalk/src/common/var.scss' with (
  $colors: (
    'primary': (
      'base': #0AB258,
    ),
  )
);

@import "~element-plus/theme-chalk/src/index";

*[class^="el-"] {
  font-family: Rubik, sans-serif;
}

.el-popover {
  padding: 0!important;
}

